# ai-collection

./: .gitignore  README.md  ai-collection.code-workspace  pyproject.toml
ai-pitch-sales-meeting/: README.md  pitch.py  pyproject.toml
ai-terrible-advice-sft-data-gen/: .gitignore  README.md  prompts.py  pyproject.toml  seed_topics.py  terrible_advice.py
ai-web-browse/: README.md  browse_web.py  pyproject.toml
