[project]
name = "ai-pitch-sales-meeting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "ipython>=9.10.0",
    "openai>=1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32",
    "rich>=13.0",
]

[project.scripts]
pitch-meeting = "pitch:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
