[project]
name = "ai-terrible-advice-sft-data-gen"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=3.0.0",
    "distilabel[ollama,openai]>=1.5.0",
    "instructor>=1.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
terrible-advice = "terrible_advice:main"

[tool.setuptools]
py-modules = ["terrible_advice", "seed_topics", "prompts"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
